--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "bootstrap": "^5.2.2",
+    "ip": "^2.0.0",
+    "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typed.js": "^2.0.12",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
