--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "bash": "^0.0.1",
     "bootstrap": "^5.2.2",
     "ip": "^2.0.0",
     "jquery": "^3.6.1",
