--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ip": "^2.0.0",
     "jquery": "^3.6.1",
     "lightgallery": "^2.7.0",
+    "ngx-typed-js": "^2.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "typed.js": "^2.0.12",
