--- a/package.json
+++ b/package.json
@@ -42,5 +42,17 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 14.2.8.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dardansahitaj-hub/Portfolio-Angular.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dardansahitaj-hub/Portfolio-Angular/issues"
+  },
+  "homepage": "https://github.com/dardansahitaj-hub/Portfolio-Angular#readme"
 }
