--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/@videogular/ngx-videogular/fonts/videogular.css",
+              "styles.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
