--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dardansahitaj",
-  "version": "0.0.0",
+  "version": "2.2.7",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,7 +10,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
+    "@angular/animations": "^14.2.12",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -22,6 +23,7 @@
     "@videogular/ngx-videogular": "^6.0.0",
     "bash": "^0.0.1",
     "bootstrap": "^5.2.2",
+    "hammerjs": "^2.0.8",
     "ip": "^2.0.0",
     "jquery": "^3.6.1",
     "lightgallery": "^2.7.0",
